@@ -39,6 +39,10 @@
   overflow: auto;
 }
 
+.pipelines .table.builds .branch-commit {
+  width: 33%;
+}
+
 .table.builds {
   min-width: 900px;
 
@@ -77,7 +81,7 @@
   }
 
   .branch-commit {
-
+    
     .branch-name {
       font-weight: bold;
       max-width: 150px;
