@@ -1,7 +1,7 @@
 - admin = local_assigns.fetch(:admin, false)
 
 - if builds.blank?
-  %li
+  %div
     .nothing-here-block No builds to show
 - else
   .table-holder
