@@ -9,33 +9,32 @@
         = ci_icon_for_status(status)
       - else
         = ci_status_with_icon(status)
-  %td
-    .branch-commit
-      = link_to namespace_project_pipeline_path(pipeline.project.namespace, pipeline.project, pipeline.id) do
-        %span ##{pipeline.id}
-      - if pipeline.ref && show_branch
-        .icon-container
-          = pipeline.tag? ? icon('tag') : icon('code-fork')
-        = link_to pipeline.ref, namespace_project_commits_path(pipeline.project.namespace, pipeline.project, pipeline.ref), class: "monospace branch-name"
-      - if show_commit
-        .icon-container
-          = custom_icon("icon_commit")
-        = link_to pipeline.short_sha, namespace_project_commit_path(pipeline.project.namespace, pipeline.project, pipeline.sha), class: "commit-id monospace"
-      - if pipeline.latest?
-        %span.label.label-success.has-tooltip{ title: 'Latest build for this branch' } latest
-      - if pipeline.triggered?
-        %span.label.label-primary triggered
-      - if pipeline.yaml_errors.present?
-        %span.label.label-danger.has-tooltip{ title: "#{pipeline.yaml_errors}" } yaml invalid
-      - if pipeline.builds.any?(&:stuck?)
-        %span.label.label-warning stuck
+  %td.branch-commit
+    = link_to namespace_project_pipeline_path(pipeline.project.namespace, pipeline.project, pipeline.id) do
+      %span ##{pipeline.id}
+    - if pipeline.ref && show_branch
+      .icon-container
+        = pipeline.tag? ? icon('tag') : icon('code-fork')
+      = link_to pipeline.ref, namespace_project_commits_path(pipeline.project.namespace, pipeline.project, pipeline.ref), class: "monospace branch-name"
+    - if show_commit
+      .icon-container
+        = custom_icon("icon_commit")
+      = link_to pipeline.short_sha, namespace_project_commit_path(pipeline.project.namespace, pipeline.project, pipeline.sha), class: "commit-id monospace"
+    - if pipeline.latest?
+      %span.label.label-success.has-tooltip{ title: 'Latest build for this branch' } latest
+    - if pipeline.triggered?
+      %span.label.label-primary triggered
+    - if pipeline.yaml_errors.present?
+      %span.label.label-danger.has-tooltip{ title: "#{pipeline.yaml_errors}" } yaml invalid
+    - if pipeline.builds.any?(&:stuck?)
+      %span.label.label-warning stuck
 
-      %p.commit-title
-        - if commit = pipeline.commit
-          = author_avatar(commit, size: 20)
-          = link_to_gfm truncate(commit.title, length: 60), namespace_project_commit_path(pipeline.project.namespace, pipeline.project, commit.id), class: "commit-row-message"
-        - else
-          Cant find HEAD commit for this branch
+    %p.commit-title
+      - if commit = pipeline.commit
+        = author_avatar(commit, size: 20)
+        = link_to_gfm truncate(commit.title, length: 60), namespace_project_commit_path(pipeline.project.namespace, pipeline.project, commit.id), class: "commit-row-message"
+      - else
+        Cant find HEAD commit for this branch
 
 
     - stages_status = pipeline.statuses.relevant.latest.stages_status
@@ -58,8 +57,8 @@
         = icon("calendar")
         #{time_ago_with_tooltip(pipeline.finished_at, short_format: false, skip_js: true)}
 
-  %td.pipeline-actions
-    .controls.hidden-xs.pull-right
+  %td.pipeline-actions.hidden-xs
+    .controls.pull-right
       - artifacts = pipeline.builds.latest.with_artifacts_not_expired
       - actions = pipeline.manual_actions
       - if artifacts.present? || actions.any?
