@@ -36,20 +36,20 @@
         = link_to ci_lint_path, class: 'btn btn-default' do
           %span CI Lint
 
-  %ul.content-list.pipelines
+  %div.content-list.pipelines
     - stages = @pipelines.stages
     - if @pipelines.blank?
-      %li
+      %div
         .nothing-here-block No pipelines to show
     - else
       .table-holder
         %table.table.builds
-          %tbody
-            %th Status
-            %th Pipeline
-            %th Stages
-            %th
-            %th
+          %thead
+            %th.col-xs-1.col-sm-1 Status
+            %th.col-xs-2.col-sm-4 Pipeline
+            %th.col-xs-2.col-sm-2 Stages
+            %th.col-xs-2.col-sm-2.commit-message
+            %th.hidden-xs.col-sm-3
           = render @pipelines, commit_sha: true, stage: true, allow_retry: true, stages: stages
 
       = paginate @pipelines, theme: 'gitlab'
